<resources>
    <string name="app_name">Omnitop</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="dnd">Dungeons and Dragons</string>
    <string name="pathf">Pathfinder</string>
    <string-array name="listaGiochi">
        <item>@string/dnd</item>
        <item>@string/pathf</item>
    </string-array>
    <string name="TODO">TODO</string>
    <string name="recenti">RECENTI</string>
    <string name="gm">DUNGEON MASTER</string>
    <string name="pg">AVVENTURIERO</string>
    <string name="lib">LIBRERIA</string>
    <string name="schede">SCHEDE</string>
    <string name="note">NOTE</string>
    <string name="cmp">COMPENDIUM</string>
    <string name="prsg">PERSONAGGIO</string>
    <string name="eqip">EQUIPAGGIAMENTO</string>
    <string name="incantesimi">INCANTESIMI</string>
    <string name="dettagli">DETTAGLI</string>
    <string name="pf">PF</string>
    <string name="ca">CLASSE ARMATURA</string>
    <string name="iniziativa">INIZIATIVA</string>
    <string name="velocità">VELOCITÀ</string>
    <string name="passiveP">PERCEZIONE PASSIVA</string>
    <string name="prof">BONUS COMPETENZA</string>
    <string name="dv">DADI VITA</string>
    <string-array name="caratteristiche">
        <item>INT</item>
        <item>SAG</item>
        <item>CHA</item>
    </string-array>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="con">CON</string>
    <string name="intel">INT</string>
    <string name="wis">WIS</string>
    <string name="cha">CHA</string>
    <string name="ts">TIRI SALVEZZA</string>
    <string name="privilegi">PRIVILEGI E TRATTI</string>
    <string name="competenze">COMPETENZE E LINGUAGGI</string>
    <string name="informazione">INFORMAZIONI BASE</string>
    <string name="razza">RAZZA:</string>
    <string name="classe">CLASSE/LIVELLO:</string>
    <string name="backGround">BACKGROUND:</string>
    <string name="puntiEsperienza">PUNTI ESPERIENZA:</string>
    <string name="allienamento">ALLINEAMENTO:</string>
    <string name="puntiisp">PUNTI ISPIRAZIONE:</string>
    <string name="nome">NOME GIOCATORE:</string>
    <string name="altreInfo">ALTRE INFORMAZIONI</string>
    <string name="monete">MONETE</string>
    <string name="mr">MR</string>
    <string name="ma">MA</string>
    <string name="me">ME</string>
    <string name="mo">MO</string>
    <string name="mp">MP</string>
    <string name="altriOggetti">ALTRI OGGETTI</string>
    <string name="classeIncantatore">CLASSE DA INCANTATORE</string>
    <string name="valore">VALORE</string>
    <string name="nda">NON ADDESTRATO / ADDESTRATO / ESPERTO</string>
    <string name="addestrato">ADDESTRATO</string>
    <string name="esperto">ESPERTO</string>
    <string name="abilità">ABILITÀ</string>
    <string name="acrobazia">Acrobazia</string>
    <string name="intuizione">Intuizione</string>
    <string name="addestrare">Ad. Animali</string>
    <string name="medicina">Medicina</string>
    <string name="arcano">Arcano</string>
    <string name="natura">Natura</string>
    <string name="atletica">Atletica</string>
    <string name="percezione">Percezione</string>
    <string name="indagare">Indagare</string>
    <string name="rapDiMa">Rap. Mano</string>
    <string name="inganno">Inganno</string>
    <string name="religione">Religione</string>
    <string name="intimidire">Intimidire</string>
    <string name="sopravvivenza">Sopravv.</string>
    <string name="intrattenere">Intrattenere</string>
    <string name="storia">Storia</string>
    <string name="furtività">Furtività</string>
    <string name="persuasione">Persuasione</string>
    <string name="caratteristicaInc">CARATTERISTICA\n INCANTATORE</string>
    <string name="CDIncantesimi">CD TIRO SALVEZZA\n \t\tINCANTESIMI</string>
    <string name="BAI">\t\t\t\t\t\tBONUS DI\n ATTACCO INCANTESIMI</string>
    <string name="trucchetti">TRUCCHETTI</string>
    <string name="lv1">LIVELLO 1</string>
    <string name="lv2">LIVELLO 2</string>
    <string name="lv3">LIVELLO 3</string>
    <string name="lv4">LIVELLO 4</string>
    <string name="lv5">LIVELLO 5</string>
    <string name="lv6">LIVELLO 6</string>
    <string name="lv7">LIVELLO 7</string>
    <string name="lv8">LIVELLO 8</string>
    <string name="lv9">LIVELLO 9</string>
    <string name="slot">SLOT</string>
    <string name="mostraInc">ELENCO INCANTESIMI</string>
    <string name="nascondiInc">NASCONDI ELENCO</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="roll">ROLL</string>
    <string name="num0">0</string>
    <string name="btnLeftParentesis">(</string>
    <string name="btnRightParentesis">)</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="backspace">⌫</string>
    <string name="displayCalcolatrice">Inserisci il tiro di dadi che vuoi effettuare</string>
    <string name="cambiomazzobtn">CAMBIA MAZZO</string>
    <string name="estraicarta">ESTRAI</string>
    <string name="mischiaMazzo">RIMESCOLA</string>
    <string name="CarteFrancesi">Francesi</string>
    <string name="CarteTarocchi">Tarocchi</string>
    <string name="CarteNapoletane">Napoletane</string>
    <string name="AssoBastoni">Asso di Bastoni</string>
    <string name="DueBastoni">2 di Bastoni</string>
    <string name="TreBastoni">3 di Bastoni</string>
    <string name="QuattroBastoni">4 di Bastoni</string>
    <string name="CinqueBastoni">5 di Bastoni</string>
    <string name="SeiBastoni">6 di Bastoni</string>
    <string name="SetteBastoni">7 di Bastoni</string>
    <string name="OttoBastoni">8 di Bastoni</string>
    <string name="NoveBastoni">9 di Bastoni</string>
    <string name="DieciBastoni">10 di Bastoni</string>
    <string name="AssoSpade">Asso di Spade</string>
    <string name="DueSpade">2 di Spade</string>
    <string name="TreSpade">3 di Spade</string>
    <string name="QuattroSpade">4 di Spade</string>
    <string name="CinqueSpade">5 di Spade</string>
    <string name="SeiSpade">6 di Spade</string>
    <string name="SetteSpade">7 di Spade</string>
    <string name="OttoSpade">8 di Spade</string>
    <string name="NoveSpade">9 di Spade</string>
    <string name="DieciSpade">10 di Spade</string>
    <string name="AssoDenari">Asso di Denari</string>
    <string name="DueDenari">2 di Denari</string>
    <string name="TreDenari">3 di Denari</string>
    <string name="QuattroDenari">4 di Denari</string>
    <string name="CinqueDenari">5 di Denari</string>
    <string name="SeiDenari">6 di Denari</string>
    <string name="SetteDenari">7 di Denari</string>
    <string name="OttoDenari">8 di Denari</string>
    <string name="NoveDenari">9 di Denari</string>
    <string name="DieciDenari">10 di Denari</string>
    <string name="AssoCoppe">Asso di Coppe</string>
    <string name="DueCoppe">2 di Coppe</string>
    <string name="TreCoppe">3 di Coppe</string>
    <string name="QuattroCoppe">4 di Coppe</string>
    <string name="CinqueCoppe">5 di Coppe</string>
    <string name="SeiCoppe">6 di Coppe</string>
    <string name="SetteCoppe">7 di Coppe</string>
    <string name="OttoCoppe">8 di Coppe</string>
    <string name="NoveCoppe">9 di Coppe</string>
    <string name="DieciCoppe">10 di Coppe</string>
    <string name="AssoPicche">Asso di Picche</string>
    <string name="DuePicche">2 di Picche</string>
    <string name="TrePicche">3 di Picche</string>
    <string name="QuattroPicche">4 di Picche</string>
    <string name="CinquePicche">5 di Picche</string>
    <string name="SeiPicche">6 di Picche</string>
    <string name="SettePicche">7 di Picche</string>
    <string name="OttoPicche">8 di Picche</string>
    <string name="NovePicche">9 di Picche</string>
    <string name="DieciPicche">10 di Picche</string>
    <string name="FantePicche">Fante di Picche</string>
    <string name="ReginaPicche">Regina di Picche</string>
    <string name="RePicche">Re di Picche</string>
    <string name="AssoFiori">Asso di Fiori</string>
    <string name="DueFiori">2 di Fiori</string>
    <string name="TreFiori">3 di Fiori</string>
    <string name="QuattroFiori">4 di Fiori</string>
    <string name="CinqueFiori">5 di Fiori</string>
    <string name="SeiFiori">6 di Fiori</string>
    <string name="SetteFiori">7 di Fiori</string>
    <string name="OttoFiori">8 di Fiori</string>
    <string name="NoveFiori">9 di Fiori</string>
    <string name="DieciFiori">10 di Fiori</string>
    <string name="FanteFiori">Fante di Fiori</string>
    <string name="ReginaFiori">Regina di Fiori</string>
    <string name="ReFiori">Re di Fiori</string>
    <string name="AssoQuadri">Asso di Quadri</string>
    <string name="DueQuadri">2 di Quadri</string>
    <string name="TreQuadri">3 di Quadri</string>
    <string name="QuattroQuadri">4 di Quadri</string>
    <string name="CinqueQuadri">5 di Quadri</string>
    <string name="SeiQuadri">6 di Quadri</string>
    <string name="SetteQuadri">7 di Quadri</string>
    <string name="OttoQuadri">8 di Quadri</string>
    <string name="NoveQuadri">9 di Quadri</string>
    <string name="DieciQuadri">10 di Quadri</string>
    <string name="FanteQuadri">Fante di Quadri</string>
    <string name="ReginaQuadri">Regina di Quadri</string>
    <string name="ReQuadri">Re di Quadri</string>
    <string name="AssoCuori">Asso di Cuori</string>
    <string name="DueCuori">2 di Cuori</string>
    <string name="TreCuori">3 di Cuori</string>
    <string name="QuattroCuori">4 di Cuori</string>
    <string name="CinqueCuori">5 di Cuori</string>
    <string name="SeiCuori">6 di Cuori</string>
    <string name="SetteCuori">7 di Cuori</string>
    <string name="OttoCuori">8 di Cuori</string>
    <string name="NoveCuori">9 di Cuori</string>
    <string name="DieciCuori">10 di Cuori</string>
    <string name="FanteCuori">Fante di Cuori</string>
    <string name="ReginaCuori">Regina di Cuori</string>
    <string name="ReCuori">Re di Cuori</string>
    <string name="MattoRosso">Matto Rosso</string>
    <string name="MattoNero">Matto Nero</string>
    <string name="Mago">1: Il Mago</string>
    <string name="Papessa">2: La Papessa</string>
    <string name="Imperatrice">3: L\'Imperatrice</string>
    <string name="Imperatore">4: L\'Imperatore</string>
    <string name="Papa">5: Il Papa</string>
    <string name="Amanti">6: Gli Amanti</string>
    <string name="Carro">7: Il Carro</string>
    <string name="Forza">8: La Forza</string>
    <string name="Eremita">9: L\'Eremita</string>
    <string name="Guida">Guida alla Creazione</string>
    <string name="sceltaClasse">1: Scelta della Classe</string>
    <string name="infoClasse">Prima ancora di definire l’aspetto fisico del vostro personaggio, vi consigliamo di iniziare scegliendone la Classe. Si tratta di una decisione cruciale, che avrà grandi ripercussioni sull’intera esperienza di gioco; ogni Classe ha infatti uno stile di gioco ben preciso, che influenzerà sia l’aspetto puramente esplorativo che lo svolgersi dei combattimenti.\n Per questa ragione, a nostro avviso, scegliere la Classe dovrebbe essere il primo passo nella creazione di un personaggio.

    Se vi state chiedendo quali siano le varie Classi nel mondo di Dungeons and Dragons, non temete: Il Vostro Dungeon Master sarà lieto di aiutarvi, altrimenti fate riferimento a manuali cartacei o online.</string>
    <string name="next">NEXT</string>
    <string name="nuovo_elemento_libreria">Nuovo Elemento Libreria</string>
    <string name="nuova_nota">Nuova Nota</string>
    <string name="nuova_scheda">Nuova Scheda</string>
    <string name="informazioni_campagna">Informazioni Campagna</string>
</resources>